# csiio

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: changelog-check.yml  publish-to-pypi.yml  python-support-policy.yml  test.yml
csiio/: __init__.py  cli.py  read_csi_files.py
docs/: use-cases-and-functionality.md
scripts/: check_changelog_staged.sh  check_python_support_policy.py  release_changelog.py
tests/: generate_conversion_audit.py  test_cli.py  test_internal_helpers.py  test_read_write.py
tests/fixtures/: README.md
tests/reports/: conversion_audit_dual.csv  conversion_audit_dual_summary.csv  conversion_audit_strict.csv  conversion_audit_summary.csv
